--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sanity/client": "^6.15.0",
+    "@sanity/client": "^6.15.1",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/overlays": "^2.3.21",
+    "@sanity/react-loader": "^1.9.0",
     "@sanity/vision": "^3.30.1",
     "next": "14.1.0",
     "next-sanity": "^7.1.4",
